# spgnn

./: .gitmodules  CMakeLists.txt  README.md
benchmark/: spmm_compare.cpp
benchmarks/backends/: accspmm.hpp  backend_base.cpp  my_spmm.hpp
benchmarks/configs/: cases.json
include/: spmm.hpp
src/: CMakeLists.txt
src/cpu/: spmm_cpu.cpp
src/gpu/: run_metapath_4hop_gh200  run_metapath_4hop_gh200.cu  spgemm_gh200.cu  spmm_gpu.cu  stress_apcpa_hold_gh200.cu
test/: CMakeLists.txt
test/common/: test_utils.hpp  timers.hpp
tests/: CMakeLists.txt  spmm_test.cpp
tests/performance/: bench_spmm.cpp  cases.json
tests/units/: test_spmm_units.cpp
tools/: dblp_data.py  dev_setup.sh
